                Work around issue with tclsh 8.4 early where
                string is integer 0x80000000 (e.g.) returns false..
                makes creation of mask gates fail.
  July 13, 2006 Forward propagate fix for defect 213 to this version.
                Took the easy way out copying all of *.cc,*.h from Display
                and ChanCommand.cpp from SpecTcl.
  July 17, 2006 Fix bitmask gate inconsistency between mask size in command
                and in the classes implemebnting the gates....do this
                by loading the gate mask value into the base class.
  July 19, 2006 Fix error in newGui.tcl. When used with scaler processing,
                RunNumber could be >Unknown< when formatting the status
                line.
  July 28, 2006 Fix error in wysiwyg printing  for zoomed displays.
  July 31, 2006 Fix off by one error in scaling.cc - for small scale ranges,
                and small channel values, the channel height was visibly
                lower than the corresponding tick mark.
  August 8, 2006 Enhancement 194 - increase precision in output of 
                 integrations.
  August 15,2006 Enhancement 205 - Limited the length of the attach spec on the
                GUI status line to at most 50 chars with the middle ones
                replaced by ...  this prevents the window from becoming
                >very large< for e.g. cluster file analysis.
  August 16, 2006 Do performance tuning of browser.tcl for 64 bit system.
	        on those systems, treeview find is terribly slow.
  August 29, 2006 Added setResult functions to CTCLInterpreter to factor
               object based result setting into one spot.
  September 7, 2006 Added support for super-events with 
                CAnalyzer::entityNotDone() function.
  Sept 8, 2006b Related to the above, allow event processors to indicate that
                0 bytes of the event were processed if the event was not complete.