@@ -85,6 +85,9 @@ CSpectrum2DmB::CSpectrum2DmB(STD(string)              name,
   CreateChannels();
 }
 
+CSpectrum2DmB::~CSpectrum2DmB() 
+{}
+
 ///////////////////////////////////////////////////////////////////
 ///////////////// Virtual function overrides //////////////////////
 ///////////////////////////////////////////////////////////////////
