@@ -85,6 +85,8 @@ CSpectrum2DmL::CSpectrum2DmL(STD(string)              name,
   CreateChannels();
 }
 
+CSpectrum2DmL::~CSpectrum2DmL() {}
+
 ///////////////////////////////////////////////////////////////////
 ///////////////// Virtual function overrides //////////////////////
 ///////////////////////////////////////////////////////////////////
