@@ -498,3 +498,4 @@ SpecTcl 3.2-pre1 starts.
                 CAnalyzer::entityNotDone() function.
   Sept 8, 2006b Related to the above, allow event processors to indicate that
                 0 bytes of the event were processed if the event was not complete.
+  Sept 27,2006  Added code to support multiply incremented 2-d sum spectra.
